# bucket-engine

./: .clang-format  .codedocs  .gitignore  .gitmodules  .vimrc  ApplicationEvent_8h_source.html  Application_8cpp.html  Application_8h.html  Application_8h_source.html  Buffer_8h_source.html  CMakeLists.txt  Core_8h_source.html  Event_8h.html  Event_8h_source.html  GraphicsContext_8h_source.html  ImGuiLayer_8cpp.html  ImGuiLayer_8h_source.html  Input_8h_source.html  KeyCodes_8h_source.html  KeyEvent_8h_source.html  LayerStack_8cpp.html  LayerStack_8h.html  LayerStack_8h_source.html  Layer_8h.html  Layer_8h_source.html  Level_8h.html  Level_8h_source.html  LinuxInput_8cpp.html  LinuxInput_8h_source.html  Log_8cpp.html  Log_8h.html  Log_8h_source.html  Mesh_8cpp.html  Mesh_8h_source.html  MouseButtonCodes_8h.html  MouseEvent_8h.html  MouseEvent_8h_source.html  OpenGLBuffer_8cpp.html  OpenGLBuffer_8h_source.html  OpenGLContext_8h_source.html  (+212 more)
.github/: labeler.yml
.github/workflows/: deploy-docs.yml
docs/: doxygen.conf
engine/: CMakeLists.txt  README.md
engine/lib/math/: CMakeLists.txt  README.md  math.h  math_headers.h  matrix.h  vector.h
engine/lib/noise/: CMakeLists.txt  noise.cpp  noise.h
engine/src/: bepch.cpp  bepch.h  engine.h
engine/src/engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
engine/src/engine/core/: EntryPoint.h  Layer.cpp  Layer.h  LayerStack.h  Timestep.h  Window.h
engine/src/engine/core/io/: Input.h  KeyCodes.h  Log.h
engine/src/engine/events/: ApplicationEvent.h  CollisionEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engine/src/engine/game/: Graph.h  KineticBody.cpp  KineticBody.h  Level.cpp  Level.h  Node.h  Vertex.h
engine/src/engine/imgui/: ImGUIBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
engine/src/engine/renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjFile.cpp  ObjFile.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  OrthographicCameraLayer.cpp  OrthographicCameraLayer.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
engine/src/engine/renderer/camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h
engine/src/engine/renderer/mesh/: Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
engine/src/platform/linux/: LinuxInput.cpp  LinuxInput.h  X11Window.cpp  X11Window.h
engine/src/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLModel.cpp  OpenGLModel.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imGUIOpenGLRenderer.cpp  imGUIOpenGLRenderer.h
engine/tests/: README.md  main.cpp  test_math.h  test_noise.h  tests.cpp  tests.h
engine/tests/core/: test_timestep.h
html/: ApplicationEvent_8h.html  Buffer_8cpp.html  Buffer_8h.html  CMakeLists_8txt.html  Core_8h.html  EntryPoint_8h.html  EntryPoint_8h_source.html  GraphicsContext_8h.html  ImGUIBuild_8cpp.html  ImGuiLayer_8h.html  ImGuiLayer_8h_source.html  Input_8h.html  Input_8h_source.html  KeyCodes_8h.html  KeyEvent_8h.html  Layer_8cpp.html  Level_8cpp.html  Level_8h_source.html  LinuxInput_8h.html  Log_8h.html  Log_8h_source.html  Mesh_8h.html  MouseButtonCodes_8h_source.html  MouseEvent_8h_source.html  OpenGLBuffer_8h.html  OpenGLBuffer_8h_source.html  OpenGLContext_8cpp.html  OpenGLContext_8h.html  OpenGLContext_8h_source.html  OpenGLRendererAPI_8cpp.html  OpenGLVertexArray_8h.html  OpenGLVertexArray_8h_source.html  OrthographicCamera_8h.html  README_8md.html  RenderCommand_8h_source.html  Shader_8h.html  Shader_8h_source.html  Texture_8h.html  Texture_8h_source.html  VertexArray_8h.html  (+105 more)
html/search/: all_1.js  all_11.js  all_15.js  all_16.js  all_17.js  all_19.js  all_b.js  all_d.js  all_e.js  classes_4.js  classes_8.js  classes_b.js  classes_c.js  classes_f.js  defines_0.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_8.js  defines_9.js  defines_a.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_2.js  files_7.js  files_9.js  files_a.js  files_b.js  files_c.js  functions_11.js  functions_3.js  (+20 more)
lib/include/glad/: glad.h
lib/src/: glad.c
minimal/: README.md
minimal/src/: Minimal.cpp
sandbox/: CMakeLists.txt
sandbox/assets/: Default.kra
sandbox/assets/shaders/: Default.glsl  Example.glsl  FlatColor.glsl  Light.glsl  Plane.glsl  Player.glsl  Suzanne.glsl  Texture.glsl  World.glsl  diablo3_pose.glsl
sandbox/src/: GameWorld.cpp  GameWorld.h  SandboxApp.cpp  SandboxApp.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  defines_4.js  defines_7.js  enums_0.js  enumvalues_0.js  enumvalues_4.js  (+49 more)
src/: main.cpp
src/helpers/: root-dir.h.in
tools/python/: obj_parser.py
